# rune

./: .clang-format  .gitignore  CMakeLists.txt  Doxyfile  README.md
.github/workflows/: macos.yml  ubuntu.yml  windows.yml
cmake/: Utilities.cmake
doxygen/: main_page.md  rune.css
doxygen/bootstrapped/: header.html
examples/: CMakeLists.txt
examples/pong/: CMakeLists.txt  pong.cpp  pong.ini
examples/ui/: CMakeLists.txt  ui_example.cpp
include/: doxygen.hpp  everything.hpp  rune.hpp  rune_api.hpp
include/containers/: aabb_tree.hpp  static_vector.hpp  vector_map.hpp
include/core/: configuration.hpp  engine.hpp  from_string.hpp  game.hpp  graphics.hpp  semi_fixed_game_loop.hpp
include/ecs/: ecs_utils.hpp
include/io/: csv.hpp  ini_value.hpp  json_utils.hpp
include/math/: random_utils.hpp
include/tmx/: parse_tileset.hpp  parse_tmx.hpp  tmx_animation.hpp  tmx_color.hpp  tmx_data.hpp  tmx_grid.hpp  tmx_layer.hpp  (+14 more)
resources/: embedded_tileset.json  external_tileset_data.json  map_embedded.json  rune.ini  rune_custom.ini  rune_default.ini  test.ini  test.json
scripts/: config.json
single-include/: rune.hpp
src/: CMakeLists.txt  everything.hpp  rune.hpp
src/common/: font_id.hpp  texture_id.hpp  texture_index.hpp
src/containers/: aabb.hpp  aabb_node.hpp  aabb_tree.hpp  stack_resource.hpp  static_vector.hpp  vector_map.hpp
src/core/: configuration.hpp  engine.hpp  formatted_string.hpp  from_string.hpp  graphics.hpp  rune_error.hpp
src/ecs/ui/: button_system.cpp  key_bind_system.cpp  label_system.cpp  lazy_texture_system.cpp  line_system.cpp  menu_system.cpp  ui_system.cpp
src/io/: csv.cpp  json_utils.cpp
src/math/: max.hpp  min.hpp  random_utils.cpp
src/rune/: almost_equal.hpp  concepts.hpp  delta_time.hpp  doxygen.hpp  engine.hpp  game.hpp  input.hpp  semi_fixed_game_loop.hpp  to_string.hpp  vector2.hpp
src/rune-aabb/: aabb_node.hpp  aabb_tree.hpp
src/rune-container/: stack_resource.hpp  static_vector.hpp  vector_map.hpp
src/rune-core/: formatted_string.hpp  rune_error.hpp
src/rune-engine/: engine.hpp
src/rune-math/: vector2.hpp
src/rune/aliases/: czstring.hpp  delta_time.hpp  integers.hpp  maybe.hpp  texture_id.hpp  texture_index.hpp
src/rune/containers/: aabb.hpp  aabb_node.hpp  aabb_tree.hpp  stack_resource.hpp  static_vector.hpp  vector_map.hpp
src/rune/core/: compiler.hpp  concepts.hpp  engine.hpp  from_string.hpp  game.hpp  graphics.hpp  input.hpp  rune_error.hpp  semi_fixed_game_loop.hpp  to_string.hpp
src/rune/ecs/: entity_type.hpp  null_entity.hpp
src/rune/ecs/events/: button_pressed_event.hpp  key_bind_triggered_event.hpp
src/rune/ecs/ui/: button_system.hpp  key_bind_system.hpp  label_system.hpp  lazy_texture_system.hpp  line_system.hpp  ui_background.hpp  ui_bounds.hpp  ui_button.hpp  ui_checkbox.hpp  ui_foreground.hpp  ui_grid.hpp  ui_key_bind.hpp  ui_label.hpp  ui_line.hpp  ui_menu.hpp  ui_position.hpp  ui_system.hpp
src/rune/generic/: stack_resource.hpp  static_vector.hpp  vector_map.hpp
src/rune/io/: ini.hpp  ini_section.hpp  ini_value.hpp  json_utils.hpp
src/rune/math/: almost_equal.hpp  max.hpp  min.hpp  random_utils.hpp  vector2.hpp
src/rune/tmx/: parse_tileset.hpp  parse_tmx.hpp  tmx.hpp  tmx_animation.hpp  tmx_color.hpp  tmx_data.hpp  tmx_global_id.hpp  tmx_grid.hpp  tmx_image_layer.hpp  tmx_layer.hpp  tmx_layer_type.hpp  tmx_local_id.hpp  tmx_map.hpp  tmx_object.hpp  tmx_object_layer.hpp  tmx_parsers.hpp  tmx_point.hpp  tmx_property.hpp  tmx_terrain.hpp  tmx_text.hpp  tmx_tile.hpp  tmx_tile_layer.hpp  tmx_tile_offset.hpp  tmx_tileset.hpp  tmx_valign.hpp  tmx_wang_color.hpp  tmx_wang_set.hpp  tmx_wang_tile.hpp
src/tmx/: parse_tileset.cpp  parse_tmx.cpp  tmx_animation.cpp  tmx_color.cpp  tmx_data.cpp  tmx_grid.cpp  tmx_image_layer.cpp  tmx_layer.cpp  tmx_object.cpp  tmx_object_layer.cpp  tmx_parsers.cpp  tmx_point.cpp  tmx_property.cpp  tmx_terrain.cpp  tmx_text.cpp  tmx_tile.cpp  tmx_tile_layer.cpp  tmx_tile_offset.cpp  tmx_wang_color.cpp  tmx_wang_set.cpp  tmx_wang_tile.cpp
test/: CMakeLists.txt
test/unit-tests/: CMakeLists.txt  serialization_utils.hpp  test_main.cpp  vector2_test.cpp
test/unit-tests/rune/: to_string_test.cpp
test/unit-tests/rune/containers/: aabb_test.cpp  aabb_tree_test.cpp  stack_resource_test.cpp  static_vector_test.cpp  vector_map_test.cpp
test/unit-tests/rune/core/: compiler_test.cpp  configuration_test.cpp  formatted_string_test.cpp  from_string_test.cpp  game_test.cpp  iterable_test.cpp  to_string_test.cpp
test/unit-tests/rune/ecs/: entity_type_test.cpp  null_entity_test.cpp
test/unit-tests/rune/ecs/ui/: button_system_test.cpp  label_system_test.cpp
test/unit-tests/rune/generic/: stack_resource_test.cpp  static_vector_test.cpp  vector_map_test.cpp
test/unit-tests/rune/io/: csv_test.cpp  ini_section_test.cpp  ini_test.cpp  ini_value_test.cpp  json_utils_test.cpp
test/unit-tests/rune/io/tmx/: tmx_animation_test.cpp  tmx_color_test.cpp  tmx_grid_test.cpp  tmx_layer_test.cpp  tmx_map_test.cpp  tmx_object_test.cpp  tmx_point_test.cpp  tmx_property_test.cpp  tmx_text_test.cpp  tmx_tile_offset_test.cpp  tmx_tileset_test.cpp  tmx_wang_color_test.cpp  tmx_wang_set_test.cpp  tmx_wang_tile_test.cpp
test/unit-tests/rune/math/: almost_equal_test.cpp  index_to_matrix_test.cpp  max_test.cpp  min_test.cpp  random_utils_test.cpp  vector2_test.cpp
test/unit-tests/rune/rune-aabb/: aabb_test.cpp  aabb_tree_test.cpp
test/unit-tests/rune/rune-container/: stack_resource_test.cpp  static_vector_test.cpp  vector_map_test.cpp
test/unit-tests/rune/rune-core/: compiler_test.cpp  formatted_string_test.cpp  from_string_test.cpp
test/unit-tests/rune/rune-math/: almost_equal_test.cpp  index_to_matrix_test.cpp  random_utils_test.cpp  vector2_test.cpp
test/unit-tests/rune/tmx/: tmx_animation_test.cpp  tmx_color_test.cpp  tmx_grid_test.cpp  tmx_layer_test.cpp  tmx_map_test.cpp  tmx_object_test.cpp  tmx_point_test.cpp  tmx_property_test.cpp  tmx_text_test.cpp  tmx_tile_offset_test.cpp  tmx_tileset_test.cpp  tmx_wang_color_test.cpp  tmx_wang_set_test.cpp  tmx_wang_tile_test.cpp
(+20 files in other folders)
